scores by school type

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1bad6661",
+   "id": "89891268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "04192aad",
+   "id": "a68ca6eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b49e9f31",
+   "id": "bd5afbe1",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e849a00",
+   "id": "e77f1c71",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "596cd492",
+   "id": "f6eaf59f",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60f75146",
+   "id": "d982aaa1",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e1dc4fd8",
+   "id": "7eca5864",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8ea016c0",
+   "id": "957dfecd",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "93d5d618",
+   "id": "6ab5dac2",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fbcfcae1",
+   "id": "46f5335f",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "33038c3b",
+   "id": "5a18914a",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2eb13f07",
+   "id": "ad95b896",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bd5ee942",
+   "id": "b5501f79",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6c28fa66",
+   "id": "4ca14515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e050d9db",
+   "id": "8dc3e55f",
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "89ddf003",
+   "id": "bbaf7c28",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d3dddca0",
+   "id": "88f46174",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6406198d",
+   "id": "1f315cd8",
    "metadata": {},
    "source": [
     "# School District Analysis"
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "497b4c8b",
+   "id": "4d796112",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "39fabcd2",
+   "id": "8ae4d25f",
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dba8538a",
+   "id": "4f8972d0",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "7825dc9f",
+   "id": "dd2c4d6d",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e895e597",
+   "id": "e7fe82ad",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0bf5788c",
+   "id": "5897bf35",
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e213e1c9",
+   "id": "3d26c883",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e500c68b",
+   "id": "0bd3ef1b",
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "54a18fd1",
+   "id": "bed42fdb",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "3f1a0caf",
+   "id": "21990353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2aea30f4",
+   "id": "111cf91f",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c2895694",
+   "id": "eba7bc8c",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ac2d5266",
+   "id": "7c00c025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1808,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "719a1cf1",
+   "id": "219ab2d9",
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "86e87867",
+   "id": "fdbff245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1842,7 +1842,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "16b162f9",
+   "id": "a2e54908",
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "9a69132b",
+   "id": "cd1093a0",
    "metadata": {},
    "outputs": [
     {
@@ -2005,7 +2005,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5adefec3",
+   "id": "feb5fa9d",
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "77fe951e",
+   "id": "cadb972f",
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2051,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8a15bd50",
+   "id": "4dba029a",
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +2131,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3d16aed8",
+   "id": "5291e8f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2144,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "53a21231",
+   "id": "2dab4f81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2163,7 +2163,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ba9b91e6",
+   "id": "fcae95ae",
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "41c261d0",
+   "id": "7511f641",
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04744650",
+   "id": "3583f514",
    "metadata": {},
    "source": [
     "# Individual School Analysis"
@@ -2317,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "1a91d22b",
+   "id": "65261539",
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6e65949c",
+   "id": "5baab4e2",
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2486,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f7672d12",
+   "id": "22132e17",
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2524,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ec3c7962",
+   "id": "0e4d2e82",
    "metadata": {},
    "outputs": [
     {
@@ -2563,7 +2563,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5771aaf4",
+   "id": "e45b6b10",
    "metadata": {},
    "outputs": [
     {
@@ -2601,7 +2601,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6448c728",
+   "id": "6ffe4661",
    "metadata": {},
    "outputs": [
     {
@@ -2640,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "86e7a397",
+   "id": "5937eda2",
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2678,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8e60f987",
+   "id": "a9fcb0cd",
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2713,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "36d4084e",
+   "id": "f2c03ac5",
    "metadata": {},
    "outputs": [
     {
@@ -2946,7 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "33982ff5",
+   "id": "68478792",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2959,7 +2959,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e69db7a7",
+   "id": "e9f38363",
    "metadata": {},
    "outputs": [
     {
@@ -2996,7 +2996,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "cf72e523",
+   "id": "796fa99a",
    "metadata": {},
    "outputs": [
     {
@@ -3033,7 +3033,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1f2f33d3",
+   "id": "9895caf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3046,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "95ec231f",
+   "id": "3f18fd55",
    "metadata": {},
    "outputs": [
     {
@@ -3285,7 +3285,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b8e135a9",
+   "id": "505292ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3298,7 +3298,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "95ed5f1a",
+   "id": "b7020ed5",
    "metadata": {},
    "outputs": [
     {
@@ -3335,7 +3335,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "65c458c8",
+   "id": "2023a8b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3348,7 +3348,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f49eac20",
+   "id": "0717a10f",
    "metadata": {},
    "outputs": [
     {
@@ -3384,7 +3384,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a24bc6cd",
+   "id": "5e503b27",
    "metadata": {},
    "outputs": [
     {
@@ -3527,7 +3527,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "358e0899",
+   "id": "42e052b6",
    "metadata": {},
    "outputs": [
     {
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "554e9987",
+   "id": "5fd18480",
    "metadata": {},
    "outputs": [
     {
@@ -3604,7 +3604,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ab880028",
+   "id": "b1a6d6c0",
    "metadata": {},
    "outputs": [
     {
@@ -3758,7 +3758,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "43e691ed",
+   "id": "1327ef75",
    "metadata": {},
    "outputs": [
     {
@@ -3907,7 +3907,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a88f103e",
+   "id": "7734910b",
    "metadata": {},
    "outputs": [
     {
@@ -4055,7 +4055,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5653a652",
+   "id": "c69f9d06",
    "metadata": {},
    "outputs": [
     {
@@ -4200,7 +4200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b0ddfa",
+   "id": "4691ec86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4210,7 +4210,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d5defafb",
+   "id": "4d1b5b18",
    "metadata": {},
    "outputs": [
     {
@@ -4355,7 +4355,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "19559395",
+   "id": "f2d90850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4364,7 +4364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7233d7c2",
+   "id": "a1e2f056",
    "metadata": {},
    "source": [
     "# Grade Level Analysis"
@@ -4373,7 +4373,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7ed6360a",
+   "id": "8fdcba54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4390,7 +4390,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b9d2badb",
+   "id": "801b070e",
    "metadata": {},
    "outputs": [
     {
@@ -4530,7 +4530,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "20114fc2",
+   "id": "c3cb59ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4547,7 +4547,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "f25ae153",
+   "id": "deecbbe8",
    "metadata": {},
    "outputs": [
     {
@@ -4584,7 +4584,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "286ba647",
+   "id": "5bff33c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4601,7 +4601,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "48a27b90",
+   "id": "a34b555c",
    "metadata": {},
    "outputs": [
     {
@@ -4707,7 +4707,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "11d1306b",
+   "id": "8686ada2",
    "metadata": {},
    "outputs": [
     {
@@ -4813,7 +4813,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3edef3a8",
+   "id": "3484df8d",
    "metadata": {},
    "outputs": [
     {
@@ -4920,7 +4920,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "11527a37",
+   "id": "ce7c6317",
    "metadata": {},
    "outputs": [
     {
@@ -5026,7 +5026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "464090b1",
+   "id": "574c5d1b",
    "metadata": {},
    "source": [
     "# Budget Analysis"
@@ -5035,7 +5035,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7e00d109",
+   "id": "938022d1",
    "metadata": {},
    "outputs": [
     {
@@ -5065,7 +5065,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3deb32c6",
+   "id": "43f313a5",
    "metadata": {},
    "outputs": [
     {
@@ -5104,7 +5104,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "ecbf2854",
+   "id": "5dc8a124",
    "metadata": {},
    "outputs": [
     {
@@ -5143,7 +5143,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f65ca475",
+   "id": "874d3838",
    "metadata": {},
    "outputs": [
     {
@@ -5170,7 +5170,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "9c7ae0c2",
+   "id": "67cc4343",
    "metadata": {},
    "outputs": [
     {
@@ -5197,7 +5197,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "78a39b45",
+   "id": "97db25a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5209,7 +5209,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "15355743",
+   "id": "2f92fe3c",
    "metadata": {},
    "outputs": [
     {
@@ -5547,7 +5547,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "df152eac",
+   "id": "73003675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5566,7 +5566,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "6404dd5b",
+   "id": "2130037b",
    "metadata": {},
    "outputs": [
     {
@@ -5592,7 +5592,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "9aa42743",
+   "id": "6f46ecdb",
    "metadata": {},
    "outputs": [
     {
@@ -5711,7 +5711,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "4db8529b",
+   "id": "9022d5f0",
    "metadata": {},
    "outputs": [
     {
@@ -5832,7 +5832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53cd8435",
+   "id": "d60044c1",
    "metadata": {},
    "source": [
     "# School Size Analysis"
@@ -5841,7 +5841,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "dbac803b",
+   "id": "d4a9b7f8",
    "metadata": {},
    "outputs": [
     {
@@ -5877,7 +5877,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "c83124cd",
+   "id": "664ff919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5889,7 +5889,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ee94c97f",
+   "id": "10604fa8",
    "metadata": {},
    "outputs": [
     {
@@ -6053,7 +6053,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "01ce7b8b",
+   "id": "b4793fef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6072,7 +6072,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "a5378049",
+   "id": "29d5151c",
    "metadata": {},
    "outputs": [
     {
@@ -6174,7 +6174,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "17399ab9",
+   "id": "f24fbe89",
    "metadata": {},
    "outputs": [
     {
@@ -6277,12 +6277,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3813c92",
+   "metadata": {},
+   "source": [
+    "# School Type Analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b8b815e",
+   "execution_count": 98,
+   "id": "28f71d47",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
   }
  ],
  "metadata": {
